src/app/components/home/home-page/home-page.component.scss
@import "/assets/styles/variables";

.my-avatar {
  max-width: 270px;
  max-height: 270px;
  border: 1px solid #3b4f58;
  border-radius: 15px;
  overflow: hidden;

  mat-icon {
    width: inherit;
    height: inherit;
    font-size: 145px;
  }
}

.my-description {
  max-width: 60%;

  .name {
    font-size: 25px;
    margin-bottom: 5px;
  }

  .headline {
    font-size: 18px;
  }

  .description {
    border: 1px solid $borderColor;
    line-height: 25px;
    border-radius: 10px;
    font-size: 14px;
  }
}

.card {
  max-width: 25%;
  max-height: 300px;
  overflow: hidden;
  cursor: pointer;
  background-color: #1b242979;
  color: $fontColor;
  transition: .2s ease, -webkit-transform .3s ease;

  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 5px;
  }

  mat-card-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  .logo-image {
    width: 60px;
    height: 60px;
    border-radius: 20%;
  }
}

.title-card {
  margin: 30px auto;
}

.card:hover {
  z-index: 1;
  background-color: #13191d79;
  box-shadow: 0 4px 8px rgba(0,0,0, .4);
}

